Feat: Styling add in home page

--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body>
-    <div class="card">
-        <p class="h1">CRUD APP</p>
+<body class="container-fluid d-flex justify-content-center align-items-center"
+    style="
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    height: 100vh;
+    width:100vw;
+    background-image: url('https://images.unsplash.com/photo-1522836924445-4478bdeb860c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80');">
+
+    <div class="card d-flex align-items-center" style="padding: 20px;">
+        <p class="h1 text-primary">CRUD APP</p>
         <h6>What you've got to do TODAY?</h6>
         <form class="row g-3">
             <div class="col-auto">
@@ -41,7 +49,8 @@
         </form>
 
         <ul class="list-group">
-            <li class="list-group-item">
+
+            <li style="list-style-type: none;">
                 <div class="input-group">
                     <input class="form-control" type="text" value="Read DSA" aria-label="readonly input example"
                         readonly>
@@ -61,7 +70,6 @@
                                 d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z" />
                         </svg>
                     </button>
-                </div>
             </li>
         </ul>
     </div>
