--- a/index.html
+++ b/index.html
@@ -15,14 +15,11 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body class="container-fluid d-flex justify-content-center align-items-center"
-    style="
+<body class="container-fluid d-flex justify-content-center align-items-center" style="
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
     height: 100vh;
     width:100vw;
-    background-image: url('https://images.unsplash.com/photo-1522836924445-4478bdeb860c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80');">
+    background-image: url('./bg.jpg');">
 
     <div class="card d-flex align-items-center" style="padding: 20px;">
         <p class="h1 text-primary">CRUD APP</p>
